<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F1F1"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@string/address"
                android:textStyle="bold"
                android:background="@color/white"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/marker"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                app:layout_constraintStart_toEndOf="@+id/marker"
                app:layout_constraintTop_toTopOf="@+id/marker" />

            <ImageView
                android:id="@+id/marker"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:padding="8dp"
                android:src="@drawable/marker"
                app:layout_constraintTop_toTopOf="@id/address"
                app:layout_constraintBottom_toBottomOf="@id/address"
                app:layout_constraintLeft_toLeftOf="@id/address"
                />


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:padding="8dp"
                android:src="@drawable/more"
                android:background="@color/white"
                app:layout_constraintTop_toTopOf="@id/address"
                app:layout_constraintBottom_toBottomOf="@id/address"
                app:layout_constraintRight_toRightOf="@id/address"
                />

            <ScrollView
                android:id="@+id/button_scrol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/delivery"
                        style="@style/button"
                        android:background="@drawable/bg_delivery"
                        android:text="@string/delivery" />


                    <TextView
                        android:id="@+id/pickup"
                        style="@style/button"
                        android:background="@drawable/button"
                        android:text="@string/Pickup" />

                    <TextView
                        android:id="@+id/catering"
                        style="@style/button"
                        android:background="@drawable/button"
                        android:text="@string/Catering" />


                    <TextView
                        android:id="@+id/curbside"
                        style="@style/button"
                        android:background="@drawable/button"
                        android:text="@string/Curbside"
                        />

                    <TextView
                        android:id="@+id/pharmacy"
                        style="@style/button"
                        android:background="@drawable/button"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/Pharmacy" />

                </LinearLayout>
            </ScrollView>

            <EditText
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_margin="16dp"
                android:layout_marginTop="10dp"
                android:hint="@string/search"
                android:paddingLeft="44dp"
                android:textColor="@color/black"
                android:background="@color/white"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_scrol" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@drawable/search"
                app:layout_constraintBottom_toBottomOf="@id/search"
                app:layout_constraintStart_toStartOf="@+id/search"
                app:layout_constraintTop_toTopOf="@id/search" />

            <ImageView
                android:layout_width="58dp"
                android:layout_height="0dp"
                android:padding="8dp"
                android:src="@drawable/preferences"
                app:layout_constraintBottom_toBottomOf="@id/search"
                app:layout_constraintEnd_toEndOf="@id/search"
                app:layout_constraintTop_toTopOf="@id/search" />

            <ScrollView
                android:id="@+id/scrollview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="14dp"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:cardBackgroundColor="#000000"
                        app:cardCornerRadius="28dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="56dp"
                            android:layout_height="56dp"
                            android:layout_gravity="center"
                            app:cardCornerRadius="26dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_launcher_background" />
                        </androidx.cardview.widget.CardView>
                    </androidx.cardview.widget.CardView>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/Takeaway"
                        android:textSize="14dp"
                        android:textStyle="bold" />


                </LinearLayout>
            </ScrollView>

            <TextView
                android:id="@+id/stores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stores"
                android:textSize="14dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scrollview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stores"
                tools:listitem="@layout/home_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>
